Fix override dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -91,12 +91,6 @@ form {
   vertical-align: middle;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    color-scheme: light;
-  }
-}
-
 @media only screen and (max-width: 768px) {
   .app {
     grid-template-columns: 1fr;
